# nepe2-base

./: CMakeLists.txt  License.txt  README.md  config.h.cmake
cmake/Modules/: Findminunit.cmake  Findrcpr.cmake
include/nepe2/: error_codes.h  metadata.h  secure_buffer.h
models/: secure_buffer_create.mk  secure_buffer_create_main.c
models/shadow/: prop_valid_memory_range.c  prop_valid_memory_range.h
models/shadow/nepe2/secure_buffer/: prop_secure_buffer_valid.c  secure_buffer_struct_tag_init.c
models/shadow/rcpr/: allocator_allocate.c  allocator_internal.h  allocator_reclaim.c  allocator_resource_handle.c  malloc_allocator_create.c  prop_allocator_valid.c  resource_init.c  resource_release.c
src/metadata/: metadata_create.c  metadata_creation_date_get.c  metadata_creation_date_set.c  metadata_empty_flag_get.c  metadata_encoding_get.c  metadata_encoding_set.c  metadata_expiration_date_get.c  metadata_expiration_date_set.c  metadata_from_buffer.c  metadata_generation_get.c  metadata_generation_set.c  metadata_hash_id_get.c  metadata_hash_id_set.c  metadata_hash_id_set_from_secure_buffer.c  metadata_internal.h  metadata_kdf_name_get.c  metadata_kdf_name_set.c  metadata_legacy_flag_get.c  metadata_legacy_flag_set.c  metadata_password_length_get.c  metadata_password_length_set.c  metadata_resource_handle.c  metadata_resource_release.c  metadata_revocation_date_get.c  metadata_revocation_date_set.c  metadata_to_buffer.c  metadata_version_get.c  metadata_version_set.c  stub.c
src/secure_buffer/: secure_buffer_create.c  secure_buffer_data.c  secure_buffer_internal.h  secure_buffer_resource_handle.c  secure_buffer_resource_release.c  stub.c
test/metadata/: test_metadata_create.cpp
test/secure_buffer/: test_secure_buffer.cpp
